[metadata]
name = ctrl_bps
description = Pluggable execution of workflow graphs from Rubin pipelines.
author = Rubin Observatory Data Management
url = https://github.com/lsst/ctrl_bps
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  astropy >=4.0
  pyyaml >=5.1
  click >= 7.0
  lsst-daf-butler @ git+https://github.com/lsst/daf_butler@main
  lsst-pipe-base @ git+https://github.com/lsst/pipe_base@main
  lsst-ctrl-mpexec @ git+https://github.com/lsst/ctrl_mpexec@main
  lsst-utils @ git+https://github.com/lsst/utils@main
  lsst-resources @ git+https://github.com/lsst/resources@main
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = W503, E203, N802, N803, N806, N812, N815, N816
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --flake8
flake8-ignore = W503 E203 N802 N803 N806 N812 N815 N816
